--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "src/pages/api/**/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "/src/pages/api/$1.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/index.html"
     }
   ],
   "env": {
     "MONGODB_URI": "mongodb+srv://as5138:Jq7h3DahtbX4XIps@cluster0.bw2rbvf.mongodb.net/crm?retryWrites=true&w=majority"
   }
-} 
+}
