--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --outDir=../server/client/dist --emptyOutDir",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "serve dist -l $PORT"
